package model.dungeon.tile;

public class Trap extends Effect {
    @Override
    public void draw() {

    }

    @Override
    public void action() {

    }
}
