package model.dungeon.tile;

public class Treasure extends Effect {
    @Override
    public void draw() {

    }

    @Override
    public void action() {

    }
}
