package model.dungeon.tile;

public class Wall extends Effect {
    @Override
    public void draw() {

    }

    @Override
    public void action() {

    }
}
