@startuml
package tile{

    class Tile{
        + draw()
        + action()
        + isWall(): boolean
    }

    class Wall{
        + draw()
        + action()
        + isWall(): boolean
    }

    class Treasure{
        + draw()
        + action()
        + isWall(): boolean
    }

    class Trap{
        + draw()
        + action()
        + isWall(): boolean
    }

    abstract Effect{
        + {abstract} draw()
        + {abstract} action()
        + {abstract} isWall()
    }

    class TileFactory << (S,#FF7700) Singleton >>{
        + getWall(): Tile
        + getTrap(): Tile
        + getTreasure(): Tile
        + getEmptyTile(): Tile
    }

}

Wall --|> Effect
Effect --|> Tile
Effect --> "1" Tile : -decore
Trap --|> Effect
Treasure --|> Effect

TileFactory ..> Tile : create

@enduml